<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarWreckLocator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_take_photo">Photographier l\'épave</string>
    <string name="btn_capture_photo">Photographier</string>
    <string name="btn_dataform_cancel">Annuler</string>
    <string name="btn_dataform_validate">Valider</string>
    <string name="txt_dataform_car_brand">Marque</string>
    <string name="txt_dataform_car_color">Couleur</string>
    <string name="txt_dataform_carregistration">Immatriculation</string>

</resources>